--- a/mystyleind.css
+++ b/mystyleind.css
@@ -1,6 +1,22 @@
 h1{
     background-color:midnightblue;
+    color: rgb(247,247,255);
 }
 h2{
     background-color: lightgray;
+}
+.agenda{
+    color: #fd3e91;
+}
+#attendance{
+    color: hsl(0, 82%, 35%);
+}
+.launch, #orgvenfridge{
+    color:cornflowerblue
+}
+#event{
+    background-color: color(display-p3 1 0.5 0 / .5);;
+}
+strong{
+    background-color: color-mix(in lch, plum 40%, pink);
 }
