--- a/mystyleind.css
+++ b/mystyleind.css
@@ -42,6 +42,8 @@ strong{
 .whiteboard{
     border: 5px solid hsl(199, 90%, 57%);
     margin-left: 15mm;
+    position: relative;
+    left: 400px;
 }
 h3 ~ ol, h3 + ul, audio{
     border: 1pt solid;
@@ -92,4 +94,7 @@ h2:has(+section){
     width: 40%;
     height: 30%;
     max-width: 60%;
+}
+#fridge{
+    position: static;
 }
